parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> class_list java_class
Rule 3     class_list -> java_class
Rule 4     java_class -> visibility static_mod CLASS ID { member_list }
Rule 5     visibility -> PRIVATE
Rule 6     visibility -> PUBLIC
Rule 7     static_mod -> <empty>
Rule 8     static_mod -> STATIC
Rule 9     member_list -> member
Rule 10    member_list -> member_list member
Rule 11    member -> MULTILINE_COMMENT
Rule 12    member -> INLINE_COMMENT
Rule 13    member -> javadoc visibility static_mod ID ( param_list ) { instruction_list }
Rule 14    member -> visibility static_mod ID ( param_list ) { instruction_list }
Rule 15    member -> javadoc visibility static_mod return_type ID ( param_list ) { instruction_list }
Rule 16    member -> visibility static_mod return_type ID ( param_list ) { instruction_list }
Rule 17    member -> visibility static_mod return_type ID ;
Rule 18    member -> visibility static_mod return_type ID = expr ;
Rule 19    javadoc -> JAVADOC
Rule 20    param -> return_type ID
Rule 21    instruction -> return_type ID ;
Rule 22    instruction -> return_type ID = expr ;
Rule 23    instruction -> DO { instruction_list } WHILE ( expr ) ;
Rule 24    instruction -> WHILE ( expr ) { instruction_list }
Rule 25    instruction -> FOR ( for_init ; expr ; expr ) { instruction_list }
Rule 26    instruction -> RETURN ;
Rule 27    instruction -> RETURN expr ;
Rule 28    instruction -> MULTILINE_COMMENT
Rule 29    instruction -> INLINE_COMMENT
Rule 30    instruction -> IF ( expr ) { instruction_list } ELSE instruction
Rule 31    instruction -> IF ( expr ) { instruction_list } ELSE { instruction_list }
Rule 32    instruction -> IF ( expr ) { instruction_list }
Rule 33    instruction -> expr ;
Rule 34    return_type -> ID [ ]
Rule 35    return_type -> STRINGTYPE [ ]
Rule 36    return_type -> DOUBLE [ ]
Rule 37    return_type -> FLOAT [ ]
Rule 38    return_type -> SHORT [ ]
Rule 39    return_type -> CHAR [ ]
Rule 40    return_type -> BOOLEAN [ ]
Rule 41    return_type -> LONG [ ]
Rule 42    return_type -> INT [ ]
Rule 43    return_type -> ID
Rule 44    return_type -> VOID
Rule 45    return_type -> STRINGTYPE
Rule 46    return_type -> CHAR
Rule 47    return_type -> BOOLEAN
Rule 48    return_type -> DOUBLE
Rule 49    return_type -> FLOAT
Rule 50    return_type -> SHORT
Rule 51    return_type -> LONG
Rule 52    return_type -> INT
Rule 53    param_list -> <empty>
Rule 54    param_list -> param_list , param
Rule 55    param_list -> param
Rule 56    instruction_list -> <empty>
Rule 57    instruction_list -> instruction_list instruction
Rule 58    expr -> ( expr )
Rule 59    expr -> ID ( arg_list )
Rule 60    expr -> ID . ID ( arg_list )
Rule 61    expr -> ID MODEQ expr  [precedence=right, level=1]
Rule 62    expr -> ID DIVEQ expr  [precedence=right, level=1]
Rule 63    expr -> ID TIMESEQ expr  [precedence=right, level=1]
Rule 64    expr -> ID MINUSEQ expr  [precedence=right, level=1]
Rule 65    expr -> ID PLUSEQ expr  [precedence=right, level=1]
Rule 66    expr -> ID = expr  [precedence=right, level=1]
Rule 67    expr -> ID
Rule 68    expr -> NULL
Rule 69    expr -> STR_CONST
Rule 70    expr -> FALSE
Rule 71    expr -> TRUE
Rule 72    expr -> CHAR_CONST
Rule 73    expr -> FLOAT_CONST
Rule 74    expr -> INT_CONST
Rule 75    expr -> NEW return_type { array_items }
Rule 76    expr -> - expr  [precedence=right, level=9]
Rule 77    expr -> NOT expr  [precedence=right, level=8]
Rule 78    expr -> expr MINUSMINUS  [precedence=left, level=10]
Rule 79    expr -> expr PLUSPLUS  [precedence=left, level=10]
Rule 80    expr -> expr GE expr  [precedence=left, level=5]
Rule 81    expr -> expr LE expr  [precedence=left, level=5]
Rule 82    expr -> expr GT expr  [precedence=left, level=5]
Rule 83    expr -> expr LT expr  [precedence=left, level=5]
Rule 84    expr -> expr NEQ expr  [precedence=left, level=4]
Rule 85    expr -> expr EQEQ expr  [precedence=left, level=4]
Rule 86    expr -> expr OR expr  [precedence=left, level=2]
Rule 87    expr -> expr AND expr  [precedence=left, level=3]
Rule 88    expr -> expr % expr  [precedence=left, level=7]
Rule 89    expr -> expr / expr  [precedence=left, level=7]
Rule 90    expr -> expr * expr  [precedence=left, level=7]
Rule 91    expr -> expr - expr  [precedence=left, level=6]
Rule 92    expr -> expr + expr  [precedence=left, level=6]
Rule 93    for_init -> expr
Rule 94    for_init -> return_type ID = expr  [precedence=right, level=1]
Rule 95    array_items -> <empty>
Rule 96    array_items -> expr
Rule 97    array_items -> array_items , expr
Rule 98    arg_list -> <empty>
Rule 99    arg_list -> arg_list , expr
Rule 100   arg_list -> expr

Terminals, with rules where they appear:

%                    : 88
(                    : 13 14 15 16 23 24 25 30 31 32 58 59 60
)                    : 13 14 15 16 23 24 25 30 31 32 58 59 60
*                    : 90
+                    : 92
,                    : 54 97 99
-                    : 76 91
.                    : 60
/                    : 89
;                    : 17 18 21 22 23 25 25 26 27 33
=                    : 18 22 66 94
AND                  : 87
BOOLEAN              : 40 47
CHAR                 : 39 46
CHAR_CONST           : 72
CLASS                : 4
DIVEQ                : 62
DO                   : 23
DOUBLE               : 36 48
ELSE                 : 30 31
EQEQ                 : 85
FALSE                : 70
FLOAT                : 37 49
FLOAT_CONST          : 73
FOR                  : 25
GE                   : 80
GT                   : 82
ID                   : 4 13 14 15 16 17 18 20 21 22 34 43 59 60 60 61 62 63 64 65 66 67 94
IF                   : 30 31 32
INLINE_COMMENT       : 12 29
INT                  : 42 52
INT_CONST            : 74
JAVADOC              : 19
LE                   : 81
LONG                 : 41 51
LT                   : 83
MINUSEQ              : 64
MINUSMINUS           : 78
MODEQ                : 61
MULTILINE_COMMENT    : 11 28
NEQ                  : 84
NEW                  : 75
NOT                  : 77
NULL                 : 68
OR                   : 86
PLUSEQ               : 65
PLUSPLUS             : 79
PRIVATE              : 5
PUBLIC               : 6
RETURN               : 26 27
SHORT                : 38 50
STATIC               : 8
STRINGTYPE           : 35 45
STR_CONST            : 69
TIMESEQ              : 63
TRUE                 : 71
VOID                 : 44
WHILE                : 23 24
[                    : 34 35 36 37 38 39 40 41 42
]                    : 34 35 36 37 38 39 40 41 42
error                : 
{                    : 4 13 14 15 16 23 24 25 30 31 31 32 75
}                    : 4 13 14 15 16 23 24 25 30 31 31 32 75

Nonterminals, with rules where they appear:

arg_list             : 59 60 99
array_items          : 75 97
class_list           : 1 2
expr                 : 18 22 23 24 25 25 27 30 31 32 33 58 61 62 63 64 65 66 76 77 78 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 94 96 97 99 100
for_init             : 25
instruction          : 30 57
instruction_list     : 13 14 15 16 23 24 25 30 31 31 32 57
java_class           : 2 3
javadoc              : 13 15
member               : 9 10
member_list          : 4 10
param                : 54 55
param_list           : 13 14 15 16 54
program              : 0
return_type          : 15 16 17 18 20 21 22 75 94
static_mod           : 4 13 14 15 16 17 18
visibility           : 4 13 14 15 16 17 18


state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . class_list java_class
    (3) class_list -> . java_class
    (4) java_class -> . visibility static_mod CLASS ID { member_list }
    (5) visibility -> . PRIVATE
    (6) visibility -> . PUBLIC
    PRIVATE         shift and go to state 5
    PUBLIC          shift and go to state 6

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    java_class                     shift and go to state 3
    visibility                     shift and go to state 4

state 1

    (0) S' -> program .


state 2

    (1) program -> class_list .
    (2) class_list -> class_list . java_class
    (4) java_class -> . visibility static_mod CLASS ID { member_list }
    (5) visibility -> . PRIVATE
    (6) visibility -> . PUBLIC
    $end            reduce using rule 1 (program -> class_list .)
    PRIVATE         shift and go to state 5
    PUBLIC          shift and go to state 6

    java_class                     shift and go to state 7
    visibility                     shift and go to state 4

state 3

    (3) class_list -> java_class .
    PRIVATE         reduce using rule 3 (class_list -> java_class .)
    PUBLIC          reduce using rule 3 (class_list -> java_class .)
    $end            reduce using rule 3 (class_list -> java_class .)


state 4

    (4) java_class -> visibility . static_mod CLASS ID { member_list }
    (7) static_mod -> .
    (8) static_mod -> . STATIC
    CLASS           reduce using rule 7 (static_mod -> .)
    STATIC          shift and go to state 9

    static_mod                     shift and go to state 8

state 5

    (5) visibility -> PRIVATE .
    STATIC          reduce using rule 5 (visibility -> PRIVATE .)
    CLASS           reduce using rule 5 (visibility -> PRIVATE .)
    ID              reduce using rule 5 (visibility -> PRIVATE .)
    STRINGTYPE      reduce using rule 5 (visibility -> PRIVATE .)
    DOUBLE          reduce using rule 5 (visibility -> PRIVATE .)
    FLOAT           reduce using rule 5 (visibility -> PRIVATE .)
    SHORT           reduce using rule 5 (visibility -> PRIVATE .)
    CHAR            reduce using rule 5 (visibility -> PRIVATE .)
    BOOLEAN         reduce using rule 5 (visibility -> PRIVATE .)
    LONG            reduce using rule 5 (visibility -> PRIVATE .)
    INT             reduce using rule 5 (visibility -> PRIVATE .)
    VOID            reduce using rule 5 (visibility -> PRIVATE .)


state 6

    (6) visibility -> PUBLIC .
    STATIC          reduce using rule 6 (visibility -> PUBLIC .)
    CLASS           reduce using rule 6 (visibility -> PUBLIC .)
    ID              reduce using rule 6 (visibility -> PUBLIC .)
    STRINGTYPE      reduce using rule 6 (visibility -> PUBLIC .)
    DOUBLE          reduce using rule 6 (visibility -> PUBLIC .)
    FLOAT           reduce using rule 6 (visibility -> PUBLIC .)
    SHORT           reduce using rule 6 (visibility -> PUBLIC .)
    CHAR            reduce using rule 6 (visibility -> PUBLIC .)
    BOOLEAN         reduce using rule 6 (visibility -> PUBLIC .)
    LONG            reduce using rule 6 (visibility -> PUBLIC .)
    INT             reduce using rule 6 (visibility -> PUBLIC .)
    VOID            reduce using rule 6 (visibility -> PUBLIC .)


state 7

    (2) class_list -> class_list java_class .
    PRIVATE         reduce using rule 2 (class_list -> class_list java_class .)
    PUBLIC          reduce using rule 2 (class_list -> class_list java_class .)
    $end            reduce using rule 2 (class_list -> class_list java_class .)


state 8

    (4) java_class -> visibility static_mod . CLASS ID { member_list }
    CLASS           shift and go to state 10


state 9

    (8) static_mod -> STATIC .
    CLASS           reduce using rule 8 (static_mod -> STATIC .)
    ID              reduce using rule 8 (static_mod -> STATIC .)
    STRINGTYPE      reduce using rule 8 (static_mod -> STATIC .)
    DOUBLE          reduce using rule 8 (static_mod -> STATIC .)
    FLOAT           reduce using rule 8 (static_mod -> STATIC .)
    SHORT           reduce using rule 8 (static_mod -> STATIC .)
    CHAR            reduce using rule 8 (static_mod -> STATIC .)
    BOOLEAN         reduce using rule 8 (static_mod -> STATIC .)
    LONG            reduce using rule 8 (static_mod -> STATIC .)
    INT             reduce using rule 8 (static_mod -> STATIC .)
    VOID            reduce using rule 8 (static_mod -> STATIC .)


state 10

    (4) java_class -> visibility static_mod CLASS . ID { member_list }
    ID              shift and go to state 11


state 11

    (4) java_class -> visibility static_mod CLASS ID . { member_list }
    {               shift and go to state 12


state 12

    (4) java_class -> visibility static_mod CLASS ID { . member_list }
    (9) member_list -> . member
    (10) member_list -> . member_list member
    (11) member -> . MULTILINE_COMMENT
    (12) member -> . INLINE_COMMENT
    (13) member -> . javadoc visibility static_mod ID ( param_list ) { instruction_list }
    (14) member -> . visibility static_mod ID ( param_list ) { instruction_list }
    (15) member -> . javadoc visibility static_mod return_type ID ( param_list ) { instruction_list }
    (16) member -> . visibility static_mod return_type ID ( param_list ) { instruction_list }
    (17) member -> . visibility static_mod return_type ID ;
    (18) member -> . visibility static_mod return_type ID = expr ;
    (19) javadoc -> . JAVADOC
    (5) visibility -> . PRIVATE
    (6) visibility -> . PUBLIC
    MULTILINE_COMMENT shift and go to state 16
    INLINE_COMMENT  shift and go to state 17
    JAVADOC         shift and go to state 19
    PRIVATE         shift and go to state 5
    PUBLIC          shift and go to state 6

    visibility                     shift and go to state 13
    member_list                    shift and go to state 14
    member                         shift and go to state 15
    javadoc                        shift and go to state 18

state 13

    (14) member -> visibility . static_mod ID ( param_list ) { instruction_list }
    (16) member -> visibility . static_mod return_type ID ( param_list ) { instruction_list }
    (17) member -> visibility . static_mod return_type ID ;
    (18) member -> visibility . static_mod return_type ID = expr ;
    (7) static_mod -> .
    (8) static_mod -> . STATIC
    ID              reduce using rule 7 (static_mod -> .)
    STRINGTYPE      reduce using rule 7 (static_mod -> .)
    DOUBLE          reduce using rule 7 (static_mod -> .)
    FLOAT           reduce using rule 7 (static_mod -> .)
    SHORT           reduce using rule 7 (static_mod -> .)
    CHAR            reduce using rule 7 (static_mod -> .)
    BOOLEAN         reduce using rule 7 (static_mod -> .)
    LONG            reduce using rule 7 (static_mod -> .)
    INT             reduce using rule 7 (static_mod -> .)
    VOID            reduce using rule 7 (static_mod -> .)
    STATIC          shift and go to state 9

    static_mod                     shift and go to state 20

state 14

    (4) java_class -> visibility static_mod CLASS ID { member_list . }
    (10) member_list -> member_list . member
    (11) member -> . MULTILINE_COMMENT
    (12) member -> . INLINE_COMMENT
    (13) member -> . javadoc visibility static_mod ID ( param_list ) { instruction_list }
    (14) member -> . visibility static_mod ID ( param_list ) { instruction_list }
    (15) member -> . javadoc visibility static_mod return_type ID ( param_list ) { instruction_list }
    (16) member -> . visibility static_mod return_type ID ( param_list ) { instruction_list }
    (17) member -> . visibility static_mod return_type ID ;
    (18) member -> . visibility static_mod return_type ID = expr ;
    (19) javadoc -> . JAVADOC
    (5) visibility -> . PRIVATE
    (6) visibility -> . PUBLIC
    }               shift and go to state 21
    MULTILINE_COMMENT shift and go to state 16
    INLINE_COMMENT  shift and go to state 17
    JAVADOC         shift and go to state 19
    PRIVATE         shift and go to state 5
    PUBLIC          shift and go to state 6

    visibility                     shift and go to state 13
    member                         shift and go to state 22
    javadoc                        shift and go to state 18

state 15

    (9) member_list -> member .
    }               reduce using rule 9 (member_list -> member .)
    MULTILINE_COMMENT reduce using rule 9 (member_list -> member .)
    INLINE_COMMENT  reduce using rule 9 (member_list -> member .)
    JAVADOC         reduce using rule 9 (member_list -> member .)
    PRIVATE         reduce using rule 9 (member_list -> member .)
    PUBLIC          reduce using rule 9 (member_list -> member .)


state 16

    (11) member -> MULTILINE_COMMENT .
    }               reduce using rule 11 (member -> MULTILINE_COMMENT .)
    MULTILINE_COMMENT reduce using rule 11 (member -> MULTILINE_COMMENT .)
    INLINE_COMMENT  reduce using rule 11 (member -> MULTILINE_COMMENT .)
    JAVADOC         reduce using rule 11 (member -> MULTILINE_COMMENT .)
    PRIVATE         reduce using rule 11 (member -> MULTILINE_COMMENT .)
    PUBLIC          reduce using rule 11 (member -> MULTILINE_COMMENT .)


state 17

    (12) member -> INLINE_COMMENT .
    }               reduce using rule 12 (member -> INLINE_COMMENT .)
    MULTILINE_COMMENT reduce using rule 12 (member -> INLINE_COMMENT .)
    INLINE_COMMENT  reduce using rule 12 (member -> INLINE_COMMENT .)
    JAVADOC         reduce using rule 12 (member -> INLINE_COMMENT .)
    PRIVATE         reduce using rule 12 (member -> INLINE_COMMENT .)
    PUBLIC          reduce using rule 12 (member -> INLINE_COMMENT .)


state 18

    (13) member -> javadoc . visibility static_mod ID ( param_list ) { instruction_list }
    (15) member -> javadoc . visibility static_mod return_type ID ( param_list ) { instruction_list }
    (5) visibility -> . PRIVATE
    (6) visibility -> . PUBLIC
    PRIVATE         shift and go to state 5
    PUBLIC          shift and go to state 6

    visibility                     shift and go to state 23

state 19

    (19) javadoc -> JAVADOC .
    PRIVATE         reduce using rule 19 (javadoc -> JAVADOC .)
    PUBLIC          reduce using rule 19 (javadoc -> JAVADOC .)


state 20

    (14) member -> visibility static_mod . ID ( param_list ) { instruction_list }
    (16) member -> visibility static_mod . return_type ID ( param_list ) { instruction_list }
    (17) member -> visibility static_mod . return_type ID ;
    (18) member -> visibility static_mod . return_type ID = expr ;
    (34) return_type -> . ID [ ]
    (35) return_type -> . STRINGTYPE [ ]
    (36) return_type -> . DOUBLE [ ]
    (37) return_type -> . FLOAT [ ]
    (38) return_type -> . SHORT [ ]
    (39) return_type -> . CHAR [ ]
    (40) return_type -> . BOOLEAN [ ]
    (41) return_type -> . LONG [ ]
    (42) return_type -> . INT [ ]
    (43) return_type -> . ID
    (44) return_type -> . VOID
    (45) return_type -> . STRINGTYPE
    (46) return_type -> . CHAR
    (47) return_type -> . BOOLEAN
    (48) return_type -> . DOUBLE
    (49) return_type -> . FLOAT
    (50) return_type -> . SHORT
    (51) return_type -> . LONG
    (52) return_type -> . INT
    ID              shift and go to state 24
    STRINGTYPE      shift and go to state 26
    DOUBLE          shift and go to state 27
    FLOAT           shift and go to state 28
    SHORT           shift and go to state 29
    CHAR            shift and go to state 30
    BOOLEAN         shift and go to state 31
    LONG            shift and go to state 32
    INT             shift and go to state 33
    VOID            shift and go to state 34

    return_type                    shift and go to state 25

state 21

    (4) java_class -> visibility static_mod CLASS ID { member_list } .
    PRIVATE         reduce using rule 4 (java_class -> visibility static_mod CLASS ID { member_list } .)
    PUBLIC          reduce using rule 4 (java_class -> visibility static_mod CLASS ID { member_list } .)
    $end            reduce using rule 4 (java_class -> visibility static_mod CLASS ID { member_list } .)


state 22

    (10) member_list -> member_list member .
    }               reduce using rule 10 (member_list -> member_list member .)
    MULTILINE_COMMENT reduce using rule 10 (member_list -> member_list member .)
    INLINE_COMMENT  reduce using rule 10 (member_list -> member_list member .)
    JAVADOC         reduce using rule 10 (member_list -> member_list member .)
    PRIVATE         reduce using rule 10 (member_list -> member_list member .)
    PUBLIC          reduce using rule 10 (member_list -> member_list member .)


state 23

    (13) member -> javadoc visibility . static_mod ID ( param_list ) { instruction_list }
    (15) member -> javadoc visibility . static_mod return_type ID ( param_list ) { instruction_list }
    (7) static_mod -> .
    (8) static_mod -> . STATIC
    ID              reduce using rule 7 (static_mod -> .)
    STRINGTYPE      reduce using rule 7 (static_mod -> .)
    DOUBLE          reduce using rule 7 (static_mod -> .)
    FLOAT           reduce using rule 7 (static_mod -> .)
    SHORT           reduce using rule 7 (static_mod -> .)
    CHAR            reduce using rule 7 (static_mod -> .)
    BOOLEAN         reduce using rule 7 (static_mod -> .)
    LONG            reduce using rule 7 (static_mod -> .)
    INT             reduce using rule 7 (static_mod -> .)
    VOID            reduce using rule 7 (static_mod -> .)
    STATIC          shift and go to state 9

    static_mod                     shift and go to state 35

state 24

    (14) member -> visibility static_mod ID . ( param_list ) { instruction_list }
    (34) return_type -> ID . [ ]
    (43) return_type -> ID .
    (               shift and go to state 36
    [               shift and go to state 37
    ID              reduce using rule 43 (return_type -> ID .)


state 25

    (16) member -> visibility static_mod return_type . ID ( param_list ) { instruction_list }
    (17) member -> visibility static_mod return_type . ID ;
    (18) member -> visibility static_mod return_type . ID = expr ;
    ID              shift and go to state 38


state 26

    (35) return_type -> STRINGTYPE . [ ]
    (45) return_type -> STRINGTYPE .
    [               shift and go to state 39
    ID              reduce using rule 45 (return_type -> STRINGTYPE .)
    {               reduce using rule 45 (return_type -> STRINGTYPE .)


state 27

    (36) return_type -> DOUBLE . [ ]
    (48) return_type -> DOUBLE .
    [               shift and go to state 40
    ID              reduce using rule 48 (return_type -> DOUBLE .)
    {               reduce using rule 48 (return_type -> DOUBLE .)


state 28

    (37) return_type -> FLOAT . [ ]
    (49) return_type -> FLOAT .
    [               shift and go to state 41
    ID              reduce using rule 49 (return_type -> FLOAT .)
    {               reduce using rule 49 (return_type -> FLOAT .)


state 29

    (38) return_type -> SHORT . [ ]
    (50) return_type -> SHORT .
    [               shift and go to state 42
    ID              reduce using rule 50 (return_type -> SHORT .)
    {               reduce using rule 50 (return_type -> SHORT .)


state 30

    (39) return_type -> CHAR . [ ]
    (46) return_type -> CHAR .
    [               shift and go to state 43
    ID              reduce using rule 46 (return_type -> CHAR .)
    {               reduce using rule 46 (return_type -> CHAR .)


state 31

    (40) return_type -> BOOLEAN . [ ]
    (47) return_type -> BOOLEAN .
    [               shift and go to state 44
    ID              reduce using rule 47 (return_type -> BOOLEAN .)
    {               reduce using rule 47 (return_type -> BOOLEAN .)


state 32

    (41) return_type -> LONG . [ ]
    (51) return_type -> LONG .
    [               shift and go to state 45
    ID              reduce using rule 51 (return_type -> LONG .)
    {               reduce using rule 51 (return_type -> LONG .)


state 33

    (42) return_type -> INT . [ ]
    (52) return_type -> INT .
    [               shift and go to state 46
    ID              reduce using rule 52 (return_type -> INT .)
    {               reduce using rule 52 (return_type -> INT .)


state 34

    (44) return_type -> VOID .
    ID              reduce using rule 44 (return_type -> VOID .)
    {               reduce using rule 44 (return_type -> VOID .)


state 35

    (13) member -> javadoc visibility static_mod . ID ( param_list ) { instruction_list }
    (15) member -> javadoc visibility static_mod . return_type ID ( param_list ) { instruction_list }
    (34) return_type -> . ID [ ]
    (35) return_type -> . STRINGTYPE [ ]
    (36) return_type -> . DOUBLE [ ]
    (37) return_type -> . FLOAT [ ]
    (38) return_type -> . SHORT [ ]
    (39) return_type -> . CHAR [ ]
    (40) return_type -> . BOOLEAN [ ]
    (41) return_type -> . LONG [ ]
    (42) return_type -> . INT [ ]
    (43) return_type -> . ID
    (44) return_type -> . VOID
    (45) return_type -> . STRINGTYPE
    (46) return_type -> . CHAR
    (47) return_type -> . BOOLEAN
    (48) return_type -> . DOUBLE
    (49) return_type -> . FLOAT
    (50) return_type -> . SHORT
    (51) return_type -> . LONG
    (52) return_type -> . INT
    ID              shift and go to state 47
    STRINGTYPE      shift and go to state 26
    DOUBLE          shift and go to state 27
    FLOAT           shift and go to state 28
    SHORT           shift and go to state 29
    CHAR            shift and go to state 30
    BOOLEAN         shift and go to state 31
    LONG            shift and go to state 32
    INT             shift and go to state 33
    VOID            shift and go to state 34

    return_type                    shift and go to state 48

state 36

    (14) member -> visibility static_mod ID ( . param_list ) { instruction_list }
    (53) param_list -> .
    (54) param_list -> . param_list , param
    (55) param_list -> . param
    (20) param -> . return_type ID
    (34) return_type -> . ID [ ]
    (35) return_type -> . STRINGTYPE [ ]
    (36) return_type -> . DOUBLE [ ]
    (37) return_type -> . FLOAT [ ]
    (38) return_type -> . SHORT [ ]
    (39) return_type -> . CHAR [ ]
    (40) return_type -> . BOOLEAN [ ]
    (41) return_type -> . LONG [ ]
    (42) return_type -> . INT [ ]
    (43) return_type -> . ID
    (44) return_type -> . VOID
    (45) return_type -> . STRINGTYPE
    (46) return_type -> . CHAR
    (47) return_type -> . BOOLEAN
    (48) return_type -> . DOUBLE
    (49) return_type -> . FLOAT
    (50) return_type -> . SHORT
    (51) return_type -> . LONG
    (52) return_type -> . INT
    )               reduce using rule 53 (param_list -> .)
    ,               reduce using rule 53 (param_list -> .)
    ID              shift and go to state 49
    STRINGTYPE      shift and go to state 26
    DOUBLE          shift and go to state 27
    FLOAT           shift and go to state 28
    SHORT           shift and go to state 29
    CHAR            shift and go to state 30
    BOOLEAN         shift and go to state 31
    LONG            shift and go to state 32
    INT             shift and go to state 33
    VOID            shift and go to state 34

    param_list                     shift and go to state 50
    param                          shift and go to state 51
    return_type                    shift and go to state 52

state 37

    (34) return_type -> ID [ . ]
    ]               shift and go to state 53


state 38

    (16) member -> visibility static_mod return_type ID . ( param_list ) { instruction_list }
    (17) member -> visibility static_mod return_type ID . ;
    (18) member -> visibility static_mod return_type ID . = expr ;
    (               shift and go to state 54
    ;               shift and go to state 55
    =               shift and go to state 56


state 39

    (35) return_type -> STRINGTYPE [ . ]
    ]               shift and go to state 57


state 40

    (36) return_type -> DOUBLE [ . ]
    ]               shift and go to state 58


state 41

    (37) return_type -> FLOAT [ . ]
    ]               shift and go to state 59


state 42

    (38) return_type -> SHORT [ . ]
    ]               shift and go to state 60


state 43

    (39) return_type -> CHAR [ . ]
    ]               shift and go to state 61


state 44

    (40) return_type -> BOOLEAN [ . ]
    ]               shift and go to state 62


state 45

    (41) return_type -> LONG [ . ]
    ]               shift and go to state 63


state 46

    (42) return_type -> INT [ . ]
    ]               shift and go to state 64


state 47

    (13) member -> javadoc visibility static_mod ID . ( param_list ) { instruction_list }
    (34) return_type -> ID . [ ]
    (43) return_type -> ID .
    (               shift and go to state 65
    [               shift and go to state 37
    ID              reduce using rule 43 (return_type -> ID .)


state 48

    (15) member -> javadoc visibility static_mod return_type . ID ( param_list ) { instruction_list }
    ID              shift and go to state 66


state 49

    (34) return_type -> ID . [ ]
    (43) return_type -> ID .
    [               shift and go to state 37
    ID              reduce using rule 43 (return_type -> ID .)
    {               reduce using rule 43 (return_type -> ID .)


state 50

    (14) member -> visibility static_mod ID ( param_list . ) { instruction_list }
    (54) param_list -> param_list . , param
    )               shift and go to state 67
    ,               shift and go to state 68


state 51

    (55) param_list -> param .
    )               reduce using rule 55 (param_list -> param .)
    ,               reduce using rule 55 (param_list -> param .)


state 52

    (20) param -> return_type . ID
    ID              shift and go to state 69


state 53

    (34) return_type -> ID [ ] .
    ID              reduce using rule 34 (return_type -> ID [ ] .)
    {               reduce using rule 34 (return_type -> ID [ ] .)


state 54

    (16) member -> visibility static_mod return_type ID ( . param_list ) { instruction_list }
    (53) param_list -> .
    (54) param_list -> . param_list , param
    (55) param_list -> . param
    (20) param -> . return_type ID
    (34) return_type -> . ID [ ]
    (35) return_type -> . STRINGTYPE [ ]
    (36) return_type -> . DOUBLE [ ]
    (37) return_type -> . FLOAT [ ]
    (38) return_type -> . SHORT [ ]
    (39) return_type -> . CHAR [ ]
    (40) return_type -> . BOOLEAN [ ]
    (41) return_type -> . LONG [ ]
    (42) return_type -> . INT [ ]
    (43) return_type -> . ID
    (44) return_type -> . VOID
    (45) return_type -> . STRINGTYPE
    (46) return_type -> . CHAR
    (47) return_type -> . BOOLEAN
    (48) return_type -> . DOUBLE
    (49) return_type -> . FLOAT
    (50) return_type -> . SHORT
    (51) return_type -> . LONG
    (52) return_type -> . INT
    )               reduce using rule 53 (param_list -> .)
    ,               reduce using rule 53 (param_list -> .)
    ID              shift and go to state 49
    STRINGTYPE      shift and go to state 26
    DOUBLE          shift and go to state 27
    FLOAT           shift and go to state 28
    SHORT           shift and go to state 29
    CHAR            shift and go to state 30
    BOOLEAN         shift and go to state 31
    LONG            shift and go to state 32
    INT             shift and go to state 33
    VOID            shift and go to state 34

    return_type                    shift and go to state 52
    param_list                     shift and go to state 70
    param                          shift and go to state 51

state 55

    (17) member -> visibility static_mod return_type ID ; .
    }               reduce using rule 17 (member -> visibility static_mod return_type ID ; .)
    MULTILINE_COMMENT reduce using rule 17 (member -> visibility static_mod return_type ID ; .)
    INLINE_COMMENT  reduce using rule 17 (member -> visibility static_mod return_type ID ; .)
    JAVADOC         reduce using rule 17 (member -> visibility static_mod return_type ID ; .)
    PRIVATE         reduce using rule 17 (member -> visibility static_mod return_type ID ; .)
    PUBLIC          reduce using rule 17 (member -> visibility static_mod return_type ID ; .)


state 56

    (18) member -> visibility static_mod return_type ID = . expr ;
    (58) expr -> . ( expr )
    (59) expr -> . ID ( arg_list )
    (60) expr -> . ID . ID ( arg_list )
    (61) expr -> . ID MODEQ expr
    (62) expr -> . ID DIVEQ expr
    (63) expr -> . ID TIMESEQ expr
    (64) expr -> . ID MINUSEQ expr
    (65) expr -> . ID PLUSEQ expr
    (66) expr -> . ID = expr
    (67) expr -> . ID
    (68) expr -> . NULL
    (69) expr -> . STR_CONST
    (70) expr -> . FALSE
    (71) expr -> . TRUE
    (72) expr -> . CHAR_CONST
    (73) expr -> . FLOAT_CONST
    (74) expr -> . INT_CONST
    (75) expr -> . NEW return_type { array_items }
    (76) expr -> . - expr
    (77) expr -> . NOT expr
    (78) expr -> . expr MINUSMINUS
    (79) expr -> . expr PLUSPLUS
    (80) expr -> . expr GE expr
    (81) expr -> . expr LE expr
    (82) expr -> . expr GT expr
    (83) expr -> . expr LT expr
    (84) expr -> . expr NEQ expr
    (85) expr -> . expr EQEQ expr
    (86) expr -> . expr OR expr
    (87) expr -> . expr AND expr
    (88) expr -> . expr % expr
    (89) expr -> . expr / expr
    (90) expr -> . expr * expr
    (91) expr -> . expr - expr
    (92) expr -> . expr + expr
    (               shift and go to state 73
    ID              shift and go to state 71
    NULL            shift and go to state 74
    STR_CONST       shift and go to state 75
    FALSE           shift and go to state 76
    TRUE            shift and go to state 77
    CHAR_CONST      shift and go to state 78
    FLOAT_CONST     shift and go to state 79
    INT_CONST       shift and go to state 80
    NEW             shift and go to state 81
    -               shift and go to state 82
    NOT             shift and go to state 83

    expr                           shift and go to state 72

state 57

    (35) return_type -> STRINGTYPE [ ] .
    ID              reduce using rule 35 (return_type -> STRINGTYPE [ ] .)
    {               reduce using rule 35 (return_type -> STRINGTYPE [ ] .)


state 58

    (36) return_type -> DOUBLE [ ] .
    ID              reduce using rule 36 (return_type -> DOUBLE [ ] .)
    {               reduce using rule 36 (return_type -> DOUBLE [ ] .)


state 59

    (37) return_type -> FLOAT [ ] .
    ID              reduce using rule 37 (return_type -> FLOAT [ ] .)
    {               reduce using rule 37 (return_type -> FLOAT [ ] .)


state 60

    (38) return_type -> SHORT [ ] .
    ID              reduce using rule 38 (return_type -> SHORT [ ] .)
    {               reduce using rule 38 (return_type -> SHORT [ ] .)


state 61

    (39) return_type -> CHAR [ ] .
    ID              reduce using rule 39 (return_type -> CHAR [ ] .)
    {               reduce using rule 39 (return_type -> CHAR [ ] .)


state 62
